// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textUnderlineMode renders 0 1`] = `
Array [
  .c0 {
  text-underline-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-mode: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-mode: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineMode renders function 1`] = `
Array [
  .c0 {
  text-underline-mode: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-mode: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-mode: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-mode: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineMode renders invalid theme path 1`] = `
Array [
  .c0 {
  text-underline-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-mode: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-mode: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineMode renders negative number 1`] = `
Array [
  .c0 {
  text-underline-mode: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-mode: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-mode: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-mode: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineMode renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-underline-mode: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-mode: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-mode: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-underline-mode: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-mode: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-mode: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-mode: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-underline-mode: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-mode: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-mode: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-mode: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-underline-mode: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-mode: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-underline-mode: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-underline-mode: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineMode renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    text-underline-mode: July;
  }
}

@media April {
  .c0 {
    text-underline-mode: August;
  }
}

@media January {
  .c0 {
    text-underline-mode: September;
  }
}

@media April {
  .c0 {
    text-underline-mode: November;
  }
}

@media June {
  .c0 {
    text-underline-mode: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-underline-mode: July;
  }
}

@media April {
  .c0 {
    text-underline-mode: August;
  }
}

@media January {
  .c0 {
    text-underline-mode: September;
  }
}

@media April {
  .c0 {
    text-underline-mode: November;
  }
}

@media June {
  .c0 {
    text-underline-mode: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-underline-mode: January;
  }
}

@media April {
  .c0 {
    text-underline-mode: December;
  }
}

@media January {
  .c0 {
    text-underline-mode: April;
  }
}

@media April {
  .c0 {
    text-underline-mode: May;
  }
}

@media June {
  .c0 {
    text-underline-mode: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-underline-mode: January;
  }
}

@media April {
  .c0 {
    text-underline-mode: December;
  }
}

@media January {
  .c0 {
    text-underline-mode: April;
  }
}

@media April {
  .c0 {
    text-underline-mode: May;
  }
}

@media June {
  .c0 {
    text-underline-mode: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineMode renders postitive number 1`] = `
Array [
  .c0 {
  text-underline-mode: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-mode: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-mode: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-mode: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineMode renders string 1`] = `
Array [
  .c0 {
  text-underline-mode: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-mode: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-mode: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-mode: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textUnderlineMode renders valid theme path 1`] = `
Array [
  .c0 {
  text-underline-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-underline-mode: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
